syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message UserData {
    int64 id = 1;
    string email = 2;
    string name = 3;
    google.protobuf.Timestamp updatedAt = 4;
    google.protobuf.Timestamp createdAt = 5;
}